--- a/css/styles.css
+++ b/css/styles.css
@@ -17,13 +17,13 @@ ul {list-style: none}
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #FFFFFF;
-    color: #757575;
+    background-color: var(--fourth-color);
+    color: var(--secondary-color);
     font-size: 14px;
     letter-spacing: 0.03em;}
 
     .logo {
-        font-family: 'Raleway';
+        font-family: 'Raleway', sans-serif;
         font-weight: 700;
         font-size: 26px;
         line-height: 1.19;
@@ -70,8 +70,18 @@ body {
             color: var(--fourth-color)}
     .button:hover, .button:focus {background-color: var(--button-hover-background);}
     
-        .feature-header {visibility: hidden}
-        
+    .visually-hidden {
+                position: absolute;
+                white-space: nowrap;
+                width: 1px;
+                height: 1px;
+                overflow: hidden;
+                border: 0;
+                padding: 0;
+                clip: rect(0 0 0 0);
+                clip-path: inset(50%);
+                margin: -1px;}
+
             .features {
                 font-weight: 700;
                 font-size: 14px;
@@ -96,7 +106,6 @@ body {
                         letter-spacing: 0.03em;
                         color: var(--primary-color)}
                     .positionteam {
-                            font-weight: 400;
                             font-size: 16px;
                             line-height: 1.19;
                             letter-spacing: 0.03em;
@@ -107,15 +116,16 @@ body {
                 font-style: normal;
                 line-height: 1.71;
                 color: var(--fourth-color)}
+    .adressfooter:hover, .adressfooter:focus {color: var(--hover-color)}
+
     .contactsfooter {font-style: normal;
                      line-height: 1.71;
                      color: var(--footer-color)}
+    .contactsfooter:hover, .contactsfooter:focus {color: var(--hover-color)}
     .logostudiofooter {color: var(--fourth-color)}
     
-    .portfolio-header { visibility: hidden}
     .portfolio-button { font-family: inherit;
                         cursor: pointer;
-                        font-family: inherit;
                         font-weight: 500;
                         font-size: 16px;
                         line-height: 1.63;
